--- a/Woong_Android/app/src/main/res/layout/fragment_marketer_top.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_marketer_top.xml
@@ -8,7 +8,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar_marketer"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="240dp"
         android:fitsSystemWindows="true"
         app:elevation="0dp"
         android:theme="@style/AppTheme.AppBarOverlay">
@@ -27,7 +27,7 @@
                 <RelativeLayout
                     android:id="@+id/relative_top_marketer"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="180dp"
                     android:background="#e6e6e6">
                     <TextView
                         android:id="@+id/tv_edit_marketer"
@@ -149,15 +149,16 @@
                         android:layout_width="match_parent"
                         android:layout_height="110dp" />
                     <RelativeLayout
-                        android:layout_width="85dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
-                        <ImageView
+                        <de.hdodenhof.circleimageview.CircleImageView
                             android:id="@+id/iv_profile_marketer"
                             android:layout_width="80dp"
                             android:layout_height="80dp"
-                            android:src="@drawable/ic_launcher_foreground"
-                            android:background="#ffaa22" />
-                        <ImageButton
+                            android:src="@color/colorPastel"
+                            app:civ_border_width="10px"
+                            app:civ_border_color="@color/colorPrimaryDark"/>
+                        <de.hdodenhof.circleimageview.CircleImageView
                             android:id="@+id/ib_editprof_marketer"
                             android:layout_width="20dp"
                             android:layout_height="20dp"
