--- a/Woong_Android/app/src/main/res/layout/fragment_home_main.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_home_main.xml
@@ -41,12 +41,12 @@
         <ImageView
             android:id="@+id/iv_searchback_main"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="35dp"
             android:layout_marginLeft="25dp"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
-            android:background="@color/colorPrimary"/>
-        <TextView
+            android:background="#ededed"/>
+        <EditText
             android:id="@+id/tv_search_main"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -54,12 +54,15 @@
             android:layout_centerHorizontal="true"
             android:textColor="#ffffff"
             android:textSize="11sp"
-            android:text="찾으시는 상품을 검색해주세요"/>
+            android:background="#00000000"
+            android:textColorHint="#9b9b9b"
+            android:hint="찾으시는 상품을 검색해주세요" />
         <ImageView
             android:id="@+id/iv_searchico_main"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_toLeftOf="@id/tv_search_main"
+            android:layout_marginLeft="20dp"
+            android:layout_alignStart="@+id/iv_searchback_main"
             android:layout_centerVertical="true"
             android:layout_marginRight="10dp"
             android:background="@color/colorAccent"/>
@@ -79,14 +82,13 @@
                 android:background="@color/colorPrimaryDark"/>
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@color/colorPrimary">
+                android:layout_height="50dp">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="25dp"
-                    android:textColor="#ffffff"
+                    android:textColor="#707070"
                     android:text="식품 카테고리"/>
             </RelativeLayout>
             <LinearLayout
@@ -95,8 +97,7 @@
                 <RelativeLayout
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:background="@color/colorAccent">
+                    android:layout_height="match_parent">
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -119,8 +120,7 @@
                 <RelativeLayout
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:background="@color/colorPrimaryDark">
+                    android:layout_height="match_parent">
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -146,8 +146,7 @@
                 <RelativeLayout
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:background="@color/colorPrimaryDark">
+                    android:layout_height="match_parent">
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -170,8 +169,7 @@
                 <RelativeLayout
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:background="@color/colorAccent">
+                    android:layout_height="match_parent">
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -193,14 +191,13 @@
             </LinearLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@color/colorPrimary">
+                android:layout_height="50dp">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="25dp"
-                    android:textColor="#ffffff"
+                    android:textColor="#707070"
                     android:text="바로가기"/>
             </RelativeLayout>
             <LinearLayout
@@ -210,8 +207,7 @@
                 <RelativeLayout
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
-                    android:layout_height="110dp"
-                    android:background="@color/colorPrimaryDark">
+                    android:layout_height="110dp">
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -234,8 +230,7 @@
                 <RelativeLayout
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
-                    android:layout_height="110dp"
-                    android:background="@color/colorPrimaryDark">
+                    android:layout_height="110dp">
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -258,8 +253,7 @@
                 <RelativeLayout
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
-                    android:layout_height="110dp"
-                    android:background="@color/colorPrimaryDark">
+                    android:layout_height="110dp">
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -282,8 +276,7 @@
                 <RelativeLayout
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
-                    android:layout_height="110dp"
-                    android:background="@color/colorPrimaryDark">
+                    android:layout_height="110dp">
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
