--- a/Woong_Android/app/src/main/res/layout/fragment_home_fruit.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_home_fruit.xml
@@ -34,6 +34,7 @@
         android:layout_alignParentTop="true">
 
         <RelativeLayout
+            android:id="@+id/relative_banana_fruit"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1">
@@ -60,6 +61,7 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/relative_peach_fruit"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1">
@@ -85,6 +87,7 @@
             </LinearLayout>
         </RelativeLayout>
         <RelativeLayout
+            android:id="@+id/relative_apple_fruit"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1">
@@ -117,6 +120,7 @@
         android:layout_alignParentTop="true">
 
         <RelativeLayout
+            android:id="@+id/relative_orange_fruit"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1">
@@ -143,6 +147,7 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/relative_straw_fruit"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1">
