--- a/Woong_Android/app/src/main/res/layout/fragment_home_grain.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_home_grain.xml
@@ -34,6 +34,7 @@
         android:layout_alignParentTop="true">
 
         <RelativeLayout
+            android:id="@+id/relative_five_grain"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1">
@@ -60,6 +61,7 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/relative_minor_grain"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1">
@@ -85,6 +87,7 @@
             </LinearLayout>
         </RelativeLayout>
         <RelativeLayout
+            android:id="@+id/relative_rice_grain"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1">
