--- a/Woong_Android/app/src/main/res/layout/fragment_home_main.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_home_main.xml
@@ -37,6 +37,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:background="#ffeeff">
         <ImageView
             android:id="@+id/iv_searchback_main"
